# memlink

./: .eslintrc.js  .gitignore  .prettierignore  .replit  .txt  002.md  AGENTS.md  LICENSE  PLAN.archived.md  PLAN.md  PLAN.new.md  README.md  SECURITY.md  TO-DO.md  eslint.config.js  format-files.sh  install-demo.sh  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gui.yml  publish.yml  release.yml
docs/: agent-setup.md  architecture.md  backups.md  cli.md  faq.md  installation.md  mcp-tools.md  overview.md  quickstart.md  server.md  skill.md
memlink-web/: index.html
memlink-web/assets/: features.html  generate-svgs.mjs
rs/: Cargo.toml  index.html  package.json  tsconfig.node.json
rs/src/: App.tsx  app.rs  index.css  main.rs  mcp.rs  storage.rs  types.rs
rs/src-tauri/: Cargo.toml  tauri.conf.json
rs/src-tauri/capabilities/: default.json
rs/src-tauri/src/: lib.rs  main.rs  storage.rs
rs/src/components/: CanvasView.tsx  EntryEditor.tsx  EntryNode.tsx  MemoryNode.tsx  TopBar.tsx
rs/src/lib/: api.ts
scripts/: build-native.ts  build.ts
src/: README.md
src/cli/: README.md  admin.ts  daemon.ts  index.ts  output.ts
src/core/: README.md  auth.ts  health.ts  lock.ts  memory.ts  meta.ts  routing.ts  scaffold.ts  session.ts  storage.ts  sync.ts  types.ts
tests/: memory.test.ts  server.test.ts  unit.test.ts  vbscript.test.ts
web/: index.html  package.json  tsconfig.json  tsconfig.node.json
(+33 files in other folders)
