[package]
name = "memlink-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
mcp = ["reqwest", "tokio"]
